<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro">

    <ImageView
        android:id="@+id/fondoImagen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:layout_alignParentTop="true"
        android:contentDescription="@null"/>

    <LinearLayout
        android:layout_width="305dp"
        android:layout_height="624dp"
        android:layout_centerInParent="true"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="24dp"
        android:background="@drawable/fondo_transparente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="121dp"
            android:layout_gravity="center"
            android:textSize="50sp"
            android:fontFamily="@font/jaldi"
            android:gravity="center"
            android:text="@string/tituloRegistrarse"
            android:textAlignment="center"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/nombre"
            android:layout_width="185dp"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/circulo_texto"
            android:gravity="center"
            android:hint="@string/nombre"
            android:inputType="text"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="40dp"
            />

        <EditText
            android:id="@+id/apellido"
            android:layout_width="186dp"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/circulo_texto"
            android:gravity="center"
            android:hint="@string/apellido"
            android:inputType="text"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="40dp"
            />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/circulo_texto"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            />
        <EditText
            android:id="@+id/contraseña"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:background="@drawable/circulo_texto"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            />
        <EditText
            android:id="@+id/direccion"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:hint="@string/direccion"
            android:inputType="text"
            android:background="@drawable/circulo_texto"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            />
        <EditText
            android:id="@+id/telefono"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="emailAddress"
            android:hint="@string/telefono"
            android:inputType="number"
            android:background="@drawable/circulo_texto"
            android:gravity="center"
            android:layout_marginBottom="8dp"
            />


        <Button
            android:id="@+id/botonContinuar"
            android:layout_width="157dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/principal"
            android:text="@string/continua"
            android:textColor="@android:color/white"
            android:layout_marginLeft="50dp"
            />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>