<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blanco">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/miToolbar"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:background="@color/principal"
        android:elevation="4dp"
        tools:ignore="MissingConstraints" />
<ScrollView
    android:id="@+id/main"
    android:layout_width="0dp"
    android:layout_height="0dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/btnAtras"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:contentDescription="@string/miCuenta"
                android:src="@drawable/flecha" />

            <ImageView
                android:id="@+id/configuracion"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginStart="300dp"
                android:contentDescription="@string/configuracion"
                android:src="@drawable/engranaje" />
        </LinearLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/fredoka"
            android:text="@string/miCuenta"
            android:textAlignment="center"
            android:textSize="36sp" />

        <ImageView
            android:id="@+id/imgPerfil"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="@drawable/forma_circulo"
            android:contentDescription="@string/descripcionImagen"
            android:scaleType="centerCrop"
            android:src="@drawable/camara" />

        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:background="@android:color/transparent"
            android:text="@string/nombre"
            android:textSize="18sp"
            android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/inter"
            android:text="@string/fechaNacimiento"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edtFechaNacimiento"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:autofillHints="fecha"
            android:focusable="false"
            android:clickable="true"
            android:background="@drawable/circulo_texto"
            android:textAlignment="center"
            android:inputType="none"
            />

    </LinearLayout>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter"
            android:text="@string/sexo"
            android:textSize="17sp" />

        <RadioGroup
            android:id="@+id/sexoGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbMujer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mujer" />

            <RadioButton
                android:id="@+id/rbHombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hormbre" />

        </RadioGroup>


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter"
            android:text="@string/direccion"
            android:textSize="17sp" />

        <EditText
            android:id="@+id/edtDireccion"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:autofillHints="name"
            android:background="@drawable/circulo_texto"
            android:inputType="text" />

        <TextView
            android:id="@+id/cambio1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter_semibold"
            android:text=""
            android:visibility="visible"
            android:textAlignment="center"
            android:textSize="17sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter"
            android:text="@string/salario"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter"
                android:text="@string/Desde"
                android:textAlignment="center"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/salarioDesde"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints="numero"
                android:textAlignment="center"
                android:background="@drawable/circulo_texto"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter"
                android:text="@string/Hasta"
                android:textAlignment="center"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/salarioHasta"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:autofillHints="numero"
                android:textAlignment="center"
                android:background="@drawable/circulo_texto"
                android:inputType="numberDecimal" />
        </LinearLayout>

        <TextView
            android:id="@+id/cambio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter"
            android:textSize="17sp"
            android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/circulo_texto"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/cambio3"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:fontFamily="@font/inter"
            android:gravity="fill"
            android:textSize="17sp" />
        <Spinner
            android:id="@+id/spinnerExperiencia"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            />


    </LinearLayout>
        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter"
            android:text="@string/referencia"
            android:textSize="17sp"
            android:textStyle="bold" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/circulo_texto"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cambio4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/inter"
                android:textSize="17sp" />

            <CheckBox
                android:id="@+id/checkBoxReferencia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/inter"
                android:layoutDirection="rtl"
                android:textSize="17sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/inter"
            android:text="@string/TipoDeTiempo"
            android:textSize="17sp"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerTipoTiempo"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter"
            android:text="@string/SobreMi"
            android:textSize="17sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edtSobreMi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:autofillHints="sobremi"
            android:background="@drawable/circulo_texto"
            android:inputType=""
            android:minLines="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="16dp">

            <Button
                android:id="@+id/btnGuardar"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/boton_borde_blanco"
                android:fontFamily="@font/inter"
                android:text="@string/guardar"
                android:textColor="@color/negro"
                android:textSize="17sp"/>

            <Button
                android:id="@+id/btnVerPerfilPublico"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@drawable/boton_borde_blanco"
                android:fontFamily="@font/inter"
                android:text="@string/VerPerfil"
                android:textColor="@color/negro"
                android:textSize="17sp"
                android:maxLines="2"
                android:gravity="center"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/menu_dibujo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu="@menu/nav_menu"
        app:labelVisibilityMode="unlabeled"
        app:itemIconSize="40dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
