<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome">

    <!-- Imagen de fondo -->
    <ImageView
        android:id="@+id/fondo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/descripcionImagen"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textColor="@android:color/transparent"
        android:textSize="42sp"
        android:textStyle="bold"
        android:fontFamily="@font/fredoka"
        android:gravity="center"
        android:layerType="software"
        android:shadowColor="#66000000"
        android:shadowDx="1"
        android:shadowDy="1"
        android:shadowRadius="4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.25" />



    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="724dp"
        android:contentDescription="@string/descripcionImagen"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/forma_invertida" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_ripple"
        android:text="@string/iniciarSesion"
        android:textColor="@color/negro"
        android:textSize="18sp"
        android:fontFamily="@font/fredoka"
        android:letterSpacing="0.05"
        android:textStyle="bold"
        android:elevation="6dp"
        android:stateListAnimator="@null"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />

    <Button
        android:id="@+id/btnRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="@drawable/btn_ripple"
        android:text="@string/registro"
        android:textColor="@color/negro"
        android:textSize="18sp"
        android:fontFamily="@font/fredoka"
        android:letterSpacing="0.05"
        android:textStyle="bold"
        android:elevation="6dp"
        android:stateListAnimator="@null"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.975" />



</androidx.constraintlayout.widget.ConstraintLayout>